# tensil

./: .gitignore  README.md  fault_codes.tsl  main.py
spec/: tensil_annotation_addendum.md  tensil_concept.md  tensil_spec.md
tensil/: pyproject.toml
tensil/tensil/: __init__.py  annotations.py  evaluate.py  parser.py  schema.py  types.py  validate.py
tensil/tests/: test_tensil.py
